# libravatar-py

./: .gitignore  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  setup.py
.github/: dependabot.yml
libravatar/: __init__.py  _query.py
src/: __init__.py  _dns.py  _query.py
