[tool.poetry]
name = "libravatar-py"
version = "1.0.1"
description = "Friendly fork of pyLibravatar for async support."
authors = ["baseplate-admin"]
license = "MIT"
readme = "README.md"
packages = [{include = "libravatar"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.25.0"
dnspython = "^2.4.2"

[tool.poetry.group.dev.dependencies]
black = ">=23.10.1,<25.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
